# Build tests
add_executable(aufgabe_2_und_3
  aufgabe_2_und_3.cpp
  )

add_executable(aufgabe3_9
  aufgabe3_9.cpp
  )

add_executable(aufgabe_4
  aufgabe_4.cpp
  circle.cpp
  vec2.cpp
  color.hpp
  )

add_executable(aufgabe_6
  aufgabe_6.cpp
  circle.cpp
  vec2.cpp
  color.hpp
  )

add_executable(aufgabe_7
  aufgabe_7.cpp
  circle.cpp
  vec2.cpp
  color.hpp
  vergleichen.hpp
  )

add_executable(aufgabe_11
  aufgabe_11.cpp
  circle1.hpp
  )



